--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -16,7 +16,7 @@
               <option value=""></option>
               {{#each characterClasses as |class c|}}
               <option value="{{class}}">{{class}}</option>
-              {{log 'c='c 'Class='class}}
+              {{!-- {{log 'c='c 'Class='class}} --}}
               {{/each}}
               {{/select}}
             </select>
