--- a/templates/actor/parts/actor-combat.hbs
+++ b/templates/actor/parts/actor-combat.hbs
@@ -10,8 +10,6 @@
         <i class="fas fa-dice-d20"></i>
       </span>
       <input type="text" name="system.fa.value" value="{{system.fa.value}}" data-dtype="Number"/>
-      <!-- <label for="system.atkRate" class="combat-label">Attack Rate</label>
-      <input type="text" name="system.atkRate" value="{{system.atkRate}}" data-dtype="String"/> -->
       <label for="system.unskilled" class="combat-label">Unskilled</label>
       <input type="text" name="system.unskilled" value="{{system.unskilled}}" data-dtype="Number"/>
     </div>
@@ -45,6 +43,7 @@
       <input type="text" name="system.unarmoredAc" value="{{system.unarmoredAc}}" disabled/>
     </div>
     <div class="resource-content flexrow flex-group-center">
+      <span></span><span></span>
       <label for="system.movement.base.value" class="combat-label">{{localize "HYP3E.movement.base.abbrev"}}</label>
       <input type="text" name="system.movement.base.value" value="{{system.movement.base.value}}" data-dtype="Number"/>
       <label for="system.otherMv.value" class="combat-label">{{localize "HYP3E.otherMv.abbrev"}}</label>
@@ -61,35 +60,35 @@
 </div>
 <div class="saves-block flexrow flex-between">
   <div class="combat-block flexrow flex-group-center">
-    <span class="rollable" data-roll="1d20" data-label="Death Save">
+    <span class="rollable" data-roll-type="save" data-roll="1d20" data-label="Death Save">
       <label for="system.saves.death.value" class="combat-label">{{localize "HYP3E.saves.death.abbrev"}}</label>
       <i class="fas fa-dice-d20"></i>
       </span>
     <input type="text" name="system.saves.death.value" value="{{system.saves.death.value}}"/>
   </div>
   <div class="combat-block flexrow flex-group-center">
-    <span class="rollable" data-roll="1d20" data-label="Device Save">
+    <span class="rollable" data-roll-type="save" data-roll="1d20" data-label="Device Save">
       <label for="system.saves.device.value" class="combat-label">{{localize "HYP3E.saves.device.abbrev"}}</label>
       <i class="fas fa-dice-d20"></i>
     </span>
     <input type="text" name="system.saves.device.value" value="{{system.saves.device.value}}"/>
   </div>
   <div class="combat-block flexrow flex-group-center">
-    <span class="rollable" data-roll="1d20" data-label="Transformation Save">
+    <span class="rollable" data-roll-type="save" data-roll="1d20" data-label="Transformation Save">
       <label for="system.saves.transformation.value" class="combat-label">{{localize "HYP3E.saves.transformation.abbrev"}}</label>
       <i class="fas fa-dice-d20"></i>
     </span>
     <input type="text" name="system.saves.transformation.value" value="{{system.saves.transformation.value}}"/>
   </div>
   <div class="combat-block flexrow flex-group-center">
-    <span class="rollable" data-roll="1d20" data-label="Avoidance Save">
+    <span class="rollable" data-roll-type="save" data-roll="1d20" data-label="Avoidance Save">
       <label for="system.saves.avoidance.value" class="combat-label">{{localize "HYP3E.saves.avoidance.abbrev"}}</label>
       <i class="fas fa-dice-d20"></i>
     </span>
     <input type="text" name="system.saves.avoidance.value" value="{{system.saves.avoidance.value}}"/>
   </div>
   <div class="combat-block flexrow flex-group-center">
-    <span class="rollable" data-roll="1d20" data-label="Sorcery Save">
+    <span class="rollable" data-roll-type="save" data-roll="1d20" data-label="Sorcery Save">
       <label for="system.saves.sorcery.value" class="combat-label">{{localize "HYP3E.saves.sorcery.abbrev"}}</label>
       <i class="fas fa-dice-d20"></i>
     </span>
