--- a/templates/dialog/roll-dialog.hbs
+++ b/templates/dialog/roll-dialog.hbs
@@ -1,24 +1,24 @@
 <form>
   <div class="hyp3e roll-dialog">
-    {{#if data.rollData.details}}
+    {{#if dataset.rollData.details}}
       <div class="roll-details">
-        {{data.rollData.details}}
+        {{dataset.rollData.details}}
       </div>
     {{/if}}
-    <div class="form-group">
-      <label>{{localize "HYP3E.rollFormula"}}</label>
-      <input type="text" name="formula" value="{{dataset.roll}}" disabled />
+    <div class="flexrow form-group">
+      <label class="dialog-label">{{localize "HYP3E.rollFormula"}}</label>
+      <input type="text" name="baseRollFormula" value="{{roll}}" disabled />
     </div>
-    <div class="form-group">
-      <label>{{localize "HYP3E.sitMod"}}</label>
-      <input type="text" name="bonus" value="" placeholder="{{localize 'HYP3E.rollExample'}}" />
+    <div class="flexrow form-group">
+      <label class="dialog-label">{{localize "HYP3E.sitMod"}}</label>
+      <input type="text" name="sitMod" value="" placeholder="{{localize 'HYP3E.rollExample'}}" />
     </div>
-    <div class="form-group">
-      <label>{{localize "HYP3E.rollMode"}}</label>
+    <div class="flexrow form-group">
+      <label class="dialog-label">{{localize "HYP3E.rollMode"}}</label>
       <select name="rollMode">
         {{#select rollMode}}
         {{#each rollModes as |label mode|}}
-          <option value="{{mode}}">{{localize label}}</option>
+        <option value="{{mode}}">{{localize label}}</option>
         {{/each}}
         {{/select}}
       </select>
