Code cleanup & commenting

--- a/templates/actor/parts/actor-combat.hbs
+++ b/templates/actor/parts/actor-combat.hbs
@@ -1,8 +1,8 @@
-{{!-- Fightting skills and combat statistics --}}
+{{!-- Fighting skills and combat statistics --}}
 <div class="combat-block flexrow">
   <div class="combat-block flexcol">
     <div class="resource-content flexrow flex-group-center">
-      <label for="fighting-skills" class="combat-header">Fighting Skills</label>
+      <h3>Fighting Skills</h3>
     </div>
     <div class="resource-content flexrow flex-group-center">
       <span class="rollable flexlarge" data-roll="1d20 + @bab + @str.atkMod" data-label="Basic Attack">
@@ -22,7 +22,7 @@
   </div>
   <div class="combat-block flexcol">
     <div class="resource-content flexrow flex-group-center">
-      <label for="combat-statistics" class="combat-header">Combat Statistics</label>
+      <h3>Combat Statistics</h3>
     </div>
     <div class="resource-content flexrow flex-group-center">
       <label for="system.hp.value" class="combat-label">Hit Points</label>
@@ -55,7 +55,7 @@
 {{!-- Saving throws here --}}
 <div class="combat-block flexrow">
   <div class="resource-content flexrow flex-group-center">
-    <label for="saving-throws" class="combat-header">Saving Throws</label>
+    <h3>Saving Throws</h3>
   </div>  
 </div>
 <div class="saves-block flexrow flex-between">
