--- a/templates/actor/actor-npc-sheet.hbs
+++ b/templates/actor/actor-npc-sheet.hbs
@@ -3,34 +3,39 @@
   {{!-- Sheet Header --}}
   <header class="sheet-header">
     <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100"/>
-    <div class="header-block">
+    <div class="character-header-block">
       <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Name"/></h1>
-      {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
-      use both the "grid" and "grid-Ncol" class where "N" can be any number
-      from 1 to 12 and will create that number of columns.  --}}
-      <div class="resource grid grid-3col">
-
-        {{!-- "flex-group-center" is also defined in the _grid.scss file
-        and it will add a small amount of padding, a border, and will
-        center all of its child elements content and text. --}}
-        <div class="resource flex-group-center">
-          <label for="system.hp.value" class="resource-label">Hit Points</label>
-          <div class="resource-content flexrow flex-center flex-between">
-            <input type="text" name="system.hp.value" value="{{system.hp.value}}" data-dtype="Number"/>
-            <span> / </span>
-            <input type="text" name="system.hp.max" value="{{system.hp.max}}" data-dtype="Number"/>
-          </div>
+      <div class="character-header-block flexrow">
+        <div class="npc-field align-center">
+          <input type="text" name="system.size" value="{{system.size}}" />
+          <span class="small-label">{{localize 'HYP3E.size'}}</span>
         </div>
-
-        <div class="resource flex-group-center">
-          <label for="system.cr" class="resource-label">CR / XP</label>
-          <div class="resource-content flexrow flex-center flex-between">
-            <input type="text" name="system.cr" value="{{system.cr}}" data-dtype="Number"/>
-            <span> / </span>
-            <input type="text" disabled="true" name="system.xp" value="{{system.xp}}" data-dtype="Number"/>
-          </div>
+        <div class="npc-field align-center">
+          <input type="text" name="system.alignment" value="{{system.alignment}}" />
+          <span class="small-label">{{localize 'HYP3E.alignment'}}</span>
         </div>
-
+        <div class="npc-field align-center">
+          <input type="text" name="system.noEnc" value="{{system.noEnc}}" />
+          <span class="small-label">{{localize 'HYP3E.noEnc'}}</span>
+        </div>
+        <div class="npc-field align-center">
+          <input type="text" name="system.noLair" value="{{system.noLair}}" />
+          <span class="small-label">{{localize 'HYP3E.noLair'}}</span>
+        </div>
+      </div>
+      <div class="character-header-block flexrow">
+        <div class="npc-field align-center">
+          <input type="text" name="system.morale" value="{{system.morale}}" />
+          <span class="small-label">{{localize 'HYP3E.morale'}}</span>
+        </div>
+        <div class="npc-field align-center">
+          <input type="text" name="system.xp" value="{{system.xp}}" />
+          <span class="small-label">{{localize 'HYP3E.xp'}}</span>
+        </div>
+        <div class="npc-field align-center">
+          <input type="text" name="system.treasure" value="{{system.treasure}}" />
+          <span class="small-label">{{localize 'HYP3E.treasure'}}</span>
+        </div>
       </div>
     </div>
   </header>
@@ -38,28 +43,34 @@
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     {{!-- Default tab is specified in actor-sheet.mjs --}}
+    <a class="item" data-tab="abilities">Abilities</a>
     <a class="item" data-tab="description">Description</a>
-    <a class="item" data-tab="items">Items</a>
     <a class="item" data-tab="effects">Effects</a>
   </nav>
 
   {{!-- Sheet Body --}}
   <section class="sheet-body">
 
-    {{!-- Biography Tab --}}
-    <div class="tab biography" data-group="primary" data-tab="description">
-      {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to the rollData property. --}}
-      {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
+    {{!-- Abilities Tab --}}
+    <div class="tab abilities" data-group="primary" data-tab="abilities">
+      {{> "systems/hyp3e/templates/actor/parts/npc-abilities.hbs"}}
     </div>
 
     {{!-- Owned Items Tab --}}
-    <div class="tab items" data-group="primary" data-tab="items">
-       {{> "systems/hyp3e/templates/actor/parts/actor-items.hbs"}}
+    <div class="tab description" data-group="primary" data-tab="description">
+      <div class="npc-description-block">
+        <h2>Description & Notes</h2>
+        {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to the rollData property. --}}
+        {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
+      </div>
     </div>
 
     {{!-- Active Effects Tab --}}
-    <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-      {{> "systems/hyp3e/templates/actor/parts/actor-effects.hbs"}}
+    <div class="tab effects" data-group="primary" data-tab="effects">
+      <div class="npc-description-block">
+        <h2>Effects & Conditions</h2>
+        {{> "systems/hyp3e/templates/actor/parts/actor-effects.hbs"}}
+      </div>
     </div>
 
   </section>
