dice roll updates

--- a/templates/actor/actor-npc-sheet.hbs
+++ b/templates/actor/actor-npc-sheet.hbs
@@ -15,12 +15,12 @@
           <span class="small-label">{{localize 'HYP3E.alignment'}}</span>
         </div>
         <div class="npc-field align-center">
-          <input type="text" name="system.noEnc" value="{{system.noEnc}}" />
-          <span class="small-label">{{localize 'HYP3E.noEnc'}}</span>
+          <input type="text" name="system.encWild" value="{{system.encWild}}" />
+          <span class="small-label">{{localize 'HYP3E.encWild'}}</span>
         </div>
         <div class="npc-field align-center">
-          <input type="text" name="system.noLair" value="{{system.noLair}}" />
-          <span class="small-label">{{localize 'HYP3E.noLair'}}</span>
+          <input type="text" name="system.encLair" value="{{system.encLair}}" />
+          <span class="small-label">{{localize 'HYP3E.encLair'}}</span>
         </div>
       </div>
       <div class="character-header-block flexrow">
