--- a/templates/actor/parts/actor-all-items.hbs
+++ b/templates/actor/parts/actor-all-items.hbs
@@ -1,3 +1,41 @@
+{{!-- Abilities, weapons, armor, and gear appear here --}}
+<h3>Abilities & Items</h3>
+<ol class="items-list">
+  <li class="item flexrow items-header">
+    <div class="item-name">Abilities</div>
+    <div class="item-prop">Roll</div>
+    <div class="item-prop">Target</div>
+    <div class="item-controls">
+      <a class="item-control item-create" title="Create item" data-type="feature">
+        <i class="fas fa-plus"></i> {{localize "HYP3E.feature.add"}}
+      </a>
+    </div>
+  </li>
+  {{#each features as |item id|}}
+    <li class="item-entry item" data-item-id="{{item._id}}">
+      <div class="item-header flexrow">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{item.name}}</h4>
+        </div>
+        <div class="item-prop">{{item.system.roll}}</div>
+        <div class="item-prop">{{item.system.target}}</div>
+        <div class="item-controls">
+          <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
+          <a class="item-control item-edit" title="{{localize 'HYP3E.item.edit'}}"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </div>
+      <div class="item-summary">
+        <div class="item-description">
+          <div>{{{item.system.description}}}</div>
+        </div>
+      </div>
+    </li>
+  {{/each}}
+</ol>
 <ol class="items-list">
   <li class="item flexrow items-header">
     <div class="item-name">Name</div>
@@ -95,3 +133,50 @@
     </li>
   {{/each}}
 </ol>
+
+{{!-- Spells appear here --}}
+{{#if system.ca.value}}
+<h3>Spells</h3>
+<ol class="items-list">
+  {{#each spells as |spells spellLevel|}}
+    <li class="item flexrow items-header">
+      <div class="item-name">Level {{spellLevel}} Spells</div>
+      <div class="item-prop"># Mem</div>
+      <div class="item-prop">Range</div>
+      <div class="item-prop">Duration</div>
+      <div class="item-prop">Save</div>
+      <div class="item-controls">
+        <a class="item-control item-create" title="Create item" data-type="spell" data-spell-level="{{spellLevel}}">
+          <i class="fas fa-plus"></i> {{localize "HYP3E.spell.addLvl"}} {{spellLevel}}
+        </a>
+      </div>
+    </li>
+    {{#each spells as |item id|}}
+      <li class="item-entry item" data-item-id="{{item._id}}">
+        <div class="item-header flexrow">
+          <div class="item-name">
+            <div class="item-image">
+              <a class="rollable" data-roll-type="item"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+            </div>
+            <h4>{{item.name}}</h4>
+          </div>
+          <div class="item-prop">{{item.system.memorized}}</div>
+          <div class="item-prop">{{item.system.range}}</div>
+          <div class="item-prop">{{item.system.duration}}</div>
+          <div class="item-prop">{{item.system.save}}</div>
+          <div class="item-controls">
+            <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
+            <a class="item-control item-edit" title="{{localize 'HYP3E.item.edit'}}"><i class="fas fa-edit"></i></a>
+            <a class="item-control item-delete" title="{{localize 'HYP3E.item.delete'}}"><i class="fas fa-trash"></i></a>
+          </div>
+      </div>
+      <div class="item-summary">
+        <div class="item-description">
+          <div>{{{item.system.description}}}</div>
+        </div>
+      </div>
+      </li>
+    {{/each}}
+  {{/each}}
+</ol>
+{{/if}}
