--- a/templates/actor/parts/npc-all-items.hbs
+++ b/templates/actor/parts/npc-all-items.hbs
@@ -16,7 +16,7 @@
       <div class="item-header flexrow">
         <div class="item-name">
           <div class="item-image">
-            <a class="rollable" data-roll-type="item"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+            <a {{#if item.system.roll}}class="rollable" data-roll-type="item"{{/if}}><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
           </div>
           <h4>{{item.name}}</h4>
         </div>
@@ -38,7 +38,7 @@
 </ol>
 <ol class="items-list">
   <li class="item flexrow items-header">
-    <div class="item-name">Name</div>
+    <div class="item-name">Items</div>
     <div class="item-prop">Qty</div>
     <div class="item-prop">Weight</div>
     <div class="item-prop">Location</div>
