--- a/templates/item/item-feature-sheet.hbs
+++ b/templates/item/item-feature-sheet.hbs
@@ -30,7 +30,14 @@
           <label class="resource-label">Target</label>
           <input type="text" name="system.target" value="{{system.target}}" data-dtype="String"/>
           <label class="resource-label">Blind Roll</label>
-          <input type="text" name="system.blindRoll" value="{{system.blindRoll}}"/>
+          {{!-- <input type="text" name="system.blindRoll" value="{{system.blindRoll}}"/> --}}
+          <select name="system.blindRoll">
+            {{#select system.blindRoll}}
+            <option value=""></option>
+            <option value="true">True</option>
+            <option value="false">False</option>
+            {{/select}}
+          </select>
         </div>
 
         {{!-- Description --}}
