--- a/templates/item/item-weapon-sheet.hbs
+++ b/templates/item/item-weapon-sheet.hbs
@@ -51,14 +51,18 @@
               {{/select}}
             </select>
           </div>
+          {{#if system.melee}}
           <label class="resource-label">Wpn Class</label>
           <input type="text" name="system.wc" value="{{system.wc}}" data-dtype="Number" />
+          {{/if}}
+          {{#if system.missile}}
           <label class="resource-label">Range</label>
           <div class="flexrow">
             <input type="text" name="system.range.short" value="{{system.range.short}}" data-dtype="Number" />
             <input type="text" name="system.range.medium" value="{{system.range.medium}}" data-dtype="Number" />
             <input type="text" name="system.range.long" value="{{system.range.long}}" data-dtype="Number" />
           </div>
+          {{/if}}
           <label class="resource-label">Atk Mod</label>
           <input type="text" name="system.atkMod" value="{{system.atkMod}}" data-dtype="Number" />
           <label class="resource-label">Dmg Mod</label>
@@ -83,8 +87,22 @@
     <div class="tab attributes" data-group="primary" data-tab="attributes">
       {{!-- As you add new fields, add them in here! --}}
       <div class="resource">
-        <label class="resource-label">Roll Formula</label>
+        <label class="resource-label">System Roll Formula</label>
         <input type="text" name="system.formula" value="{{system.formula}}" data-dtype="String"/>
+        <label class="resource-label">Attack Roll Formula</label>
+        <input type="text" name="system.attack" value="{{system.attack}}" data-dtype="String"/>
+        {{!-- <label class="resource-label">Damage Roll Formula</label>
+        <input type="text" name="system.damage" value="{{system.damage}}" data-dtype="String"/> --}}
+        <label class="resource-label">Check Roll Formula</label>
+        <input type="text" name="system.check" value="{{system.check}}" data-dtype="String"/>
+        <label class="resource-label">Save Roll Formula</label>
+        <input type="text" name="system.save" value="{{system.save}}" data-dtype="String"/>
+        <label class="resource-label">Duration Formula</label>
+        <input type="text" name="system.duration" value="{{system.duration}}" data-dtype="String"/>
+        <label class="resource-label">Number Affected Formula</label>
+        <input type="text" name="system.affected" value="{{system.affected}}" data-dtype="String"/>
+        <label class="resource-label">Target Number Formula</label>
+        <input type="text" name="system.target" value="{{system.target}}" data-dtype="String"/>
         <label class="resource-label">Item ID</label>
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
         <label class="resource-label">Container ID</label>
