--- a/templates/actor/parts/actor-spells.hbs
+++ b/templates/actor/parts/actor-spells.hbs
@@ -36,7 +36,7 @@
         <div class="item-header flexrow">
           <div class="item-name">
             <div class="item-image">
-              <a class="rollable" data-roll-type="item"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+              <a {{#if item.system.roll}}class="rollable" data-roll-type="item" data-label="Attack with {{item.name}}"{{/if}}><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
             </div>
             <h4>{{item.name}}</h4>
           </div>
