--- a/templates/actor/parts/npc-all-items.hbs
+++ b/templates/actor/parts/npc-all-items.hbs
@@ -3,7 +3,7 @@
 <ol class="items-list">
   <li class="item flexrow items-header">
     <div class="item-name">Abilities</div>
-    <div class="item-prop">Roll</div>
+    <div class="item-prop">Check Roll</div>
     <div class="item-prop">Target</div>
     <div class="item-controls">
       <a class="item-control item-create" title="Create item" data-type="feature">
@@ -16,11 +16,11 @@
       <div class="item-header flexrow">
         <div class="item-name">
           <div class="item-image">
-            <a {{#if item.system.roll}}class="rollable" data-roll-type="item"{{/if}}><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+            <a {{#if item.system.roll}}class="rollable" data-roll-type="item" data-label="Attack with {{item.name}}"{{/if}}><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
           </div>
           <h4>{{item.name}}</h4>
         </div>
-        <div class="item-prop">{{item.system.roll}}</div>
+        <div class="item-prop">{{item.system.check}}</div>
         <div class="item-prop">{{item.system.target}}</div>
         <div class="item-controls">
           <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
